--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -15,3 +15,31 @@
     text-align: center;
     font-size: 1.5em;
 }
+
+#secEncabezadoPagina{
+    background: linear-gradient(180deg, #b78e54 0%, #ffe054   100%);
+}
+#miNombre{
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+}
+#logoLogin{
+    display: flex;
+    align-items: center;
+    justify-content: right;
+}
+#logOut{
+    background: linear-gradient(180deg, #b78e54 0%, #ffe054   100%);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+}
+#secMenuPagina{
+    padding-left: unset;
+    padding-right: unset;
+}
+
+
+/* #miNombre{
+  
+} */
