--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -17,7 +17,7 @@
 }
 
 #secEncabezadoPagina{
-    background: linear-gradient(180deg, #b78e54 0%, #ffe054   100%);
+    background: linear-gradient(180deg, #B3E0FF 0%, #E3F2FD   100%);
 }
 #miNombre{
     display: flex !important;
@@ -30,16 +30,17 @@
     justify-content: right;
 }
 #logOut{
-    background: linear-gradient(180deg, #b78e54 0%, #ffe054   100%);
+    background: linear-gradient(180deg, #B3E0FF 0%, #E3F2FD   100%);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5), 0 0 20px rgba(0, 0, 0, 0.7);
     border-radius: 10px;
 }
 #secMenuPagina{
     padding-left: unset;
     padding-right: unset;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3), 0 0 16px rgba(0, 0, 0, 0.5);
+
+}
+#secContenidoPagina{
+    background: linear-gradient(180deg, #E3F2FD 0%, #B3E0FF   100%) !important;
 }
 
-
-/* #miNombre{
-  
-} */
