--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -1,3 +1,5 @@
+
+
 html{
     background: linear-gradient(180deg, #b88d37 0%, #fff767   100%) !important;
     min-height: 100%;
@@ -68,11 +70,26 @@ body{
     font-size: large;
     text-shadow: 0 0 16px rgba(255, 247, 103, 1), 0 0 16px rgba(255, 247, 103, 1);
 }
+
+#formularioBuscar{
+    margin-bottom: 15px;
+}
+#formularioBuscar > *{
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+#formularioCrear > *{
+    margin-right: 10px !important;
+}
+#camposUsuario > *{
+    margin-right: 15px;
+}
 input{
     background: linear-gradient(180deg, #b88d37 0%, #fff767   100%) ;
 }
 
-#b_texto::placeholder {
+input::placeholder {
     color: black;
 }
 
@@ -90,12 +107,17 @@ select{
     background: linear-gradient(180deg, #b88d37 0%, #fff767   100%) ;
 }
 
-#btnBuscar{
+button{
+    color: #000 !important;
+    border-color: #000 !important;
     background: linear-gradient(180deg, #fff767 0%, #b88d37   100%);
+}
+button:focus{
+    box-shadow: 0 0 7px black !important;
 }
 #tablaListado{
     border: solid black 1px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.9);
     width: 100%;
     margin-top: 15px;
     
@@ -110,7 +132,7 @@ select{
 }
 #capaResultadosBusqueda{
     width: 100% !important;
-    height: 700px;
+    height: 730px;
     scroll-behavior: auto;
     overflow: auto;
     
