--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -66,8 +66,6 @@ body{
 }
 #txtBusqueda{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: large;
     text-shadow: 0 0 16px rgba(255, 247, 103, 1), 0 0 16px rgba(255, 247, 103, 1);
 }
 
@@ -79,6 +77,10 @@ body{
     margin-bottom: 10px;
 }
 
+#txtInsertar{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-shadow: 0 0 16px rgba(255, 247, 103, 1), 0 0 16px rgba(255, 247, 103, 1);
+}
 #formularioCrear > *{
     margin-right: 10px !important;
 }
@@ -132,7 +134,7 @@ button:focus{
 }
 #capaResultadosBusqueda{
     width: 100% !important;
-    height: 730px;
+    height: 650px;
     scroll-behavior: auto;
     overflow: auto;
     
