--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -124,6 +124,24 @@ button:focus{
     margin-top: 15px;
     
 }
+/* #tablaListado th{
+    text-align: center !important;
+
+} */
+
+table tr td:nth-child(4),
+table tr th:nth-child(4) {
+    text-align: center !important;
+}
+table tr td:nth-child(5),
+table tr th:nth-child(5) {
+    text-align: right !important;
+}
+
+table tr td:nth-child(6),
+table tr th:nth-child(6) {
+    text-align: center !important;
+}
 
 #tablaListado th,
 #tablaListado td {
