--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -220,6 +220,22 @@ table tr td:nth-child(6) {
     padding: 8px;
     text-align: left;
 }
+.error-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.error {
+    margin-right: 10px; /* Espacio entre los mensajes de error */
+    margin-bottom: 10px; /* Espacio debajo de los mensajes de error */
+    color: red; /* Color rojo para el texto de error */
+}
+
+.error-field {
+    color: red; /* Color rojo para el campo de error */
+    margin-bottom: 5px; /* Espacio debajo del campo de error */
+}
+
 
 /* #capaResultadosBusqueda {
     
