--- a/www/di23/librerias/bootstrap-5.1.3-dist/css/bootstrap.css
+++ b/www/di23/librerias/bootstrap-5.1.3-dist/css/bootstrap.css
@@ -2106,13 +2106,13 @@ progress {
 .table-dark {
   --bs-table-bg: #212529;
   --bs-table-striped-bg: #2c3034;
-  --bs-table-striped-color: #b88d37;
+  --bs-table-striped-color: #fff767;
   --bs-table-active-bg: #373b3e;
   --bs-table-active-color: #fff;
   --bs-table-hover-bg: #323539;
   --bs-table-hover-color: #fff;
   color: #fff767;
-  border-color: #373b3e;
+  border-color: #000;
 }
 
 .table-responsive {
