--- a/www/di23/css/index.css
+++ b/www/di23/css/index.css
@@ -171,7 +171,7 @@ button {
 #tablaListado {
     border: solid black 1px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.9);
-    width: 100%;
+    width: 100% !important;
     margin-top: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 
@@ -214,21 +214,23 @@ td:nth-child(5) {
 table tr td{
     text-align: center !important;
 } */
-td img {
-    width: 35px;
-    height: 35px;
+td:nth-child(4) img {
+    width: 50px;
+    height: 50px;
+}
+td:nth-child(6) img {
+    width: 40px;
+    height: 40px;
 }
 
 #imgMasc {
-    background-color: #fff767;
+    /* background-color: #fff767; */
     border-radius: 50%;
-    /* Esto redondea la imagen al 50%, creando un círculo */
 }
 
 #imgFem {
-    background-color: #fff767;
+    /* background-color: #fff767; */
     border-radius: 50%;
-    /* Esto redondea la imagen al 50%, creando un círculo */
 }
 
 /* table tr td:nth-child(1) {
@@ -255,6 +257,9 @@ table tr td:nth-child(6) {
     border-bottom: 1px solid black;
     padding: 8px;
     text-align: left;
+}
+#tablaListado td{
+    padding-left: 8px;
 }
 
 .error-container {
